force-app/main/community-pages-rh/aura/Form_EditPatientInfo/Form_EditPatientInfo.css
/**
 * Created by Leonid Bartenev
 */ 
 .THIS .tooltip {
    position: relative;
    display: inline-block;
}

.THIS  .tooltip .tooltiptext {
    visibility: hidden;
    width: 400px;
    background-color: white;
    color: grey;
    text-align: center;
    z-index: 1;
    top: -16px;
    display: inline-block;
    position: absolute;
    border: 1px solid #777777;
    text-decoration: none;
}
.THIS  .tooltip:hover .tooltiptext {
    visibility: visible;
}
.THIS .textoverlap
{
    width: 16rem;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}
.THIS  .tooltip .tooltiptext_DaytimeTelephoneNumber {
    visibility: hidden;
    width: 220px;
    background-color: white;
    color: grey;
    text-align: center;
    z-index: 1;
    top: -16px;
    display: inline-block;
    position: absolute;
    border: 1px solid #777777;
    text-decoration: none;
}
.THIS  .tooltip:hover .tooltiptext_DaytimeTelephoneNumber {
    visibility: visible;
}
.THIS .textoverlap_DaytimeTelephoneNumber
{
    width: 13rem;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

 .THIS .rr-form-element + .rr-form-element {
    margin-top: 0;
    margin-bottom: 25px;
}
.THIS .slds-datepicker table {
    table-layout: fixed;
    width: 300px;
}
.THIS .slds-checkbox{
    display: inline-flex;
}
.THIS .slds-datepicker .slds-day {
    width: auto !important;
    min-width: auto !important;
    height: auto !important;
    line-height: inherit !important;
}
.THIS .rightAlign .slds-datepicker table {
    table-layout: fixed;
    width: 300px;
}
.THIS .rightAlign .slds-input {
    padding-right: 2px;
}
.THIS .rightAlign .slds-datepicker .slds-day {
    width: auto !important;
    min-width: auto !important;
    height: auto !important;
    line-height: inherit !important;
}
.THIS .rightAlign .slds-input__icon_right {
  /* @noflip */   margin-right: 83%;
}
.THIS .rr-form-element {
    margin-bottom: 25px;
}

.THIS .ap-section-title {
    font-size: 1rem;
    line-height: 36px;
    color: #000;
    font-weight: 600;
}

.THIS .ap-section + .ap-section {
    margin-top: 20px;
}

.THIS .ap-section > .slds-grid.rr-form-element .slds-form-element__help {
    white-space: nowrap;
}

.THIS .ap-buttons {
    display: flex;
    justify-content: flex-end;
    margin-top: 10px;
    margin-bottom: 80px;
}

.THIS .apollo-btn.custom-cancel {
    background-color: #e8e8e8;
}

.THIS .rr-form-element .slds-form-element__label {
    display: none;
}

.THIS .rr-form-element .cRrSelect .slds-select_container .slds-select {
    margin-top: 0;
}

.THIS .slds-form-element__icon {
    padding-top: 0;
    margin-left: 3px;
}
.THIS .lightning-primitiveicon_primitiveicon-host {
    padding: 20px;
    color: white;
}

.THIS .rr-error
{
    color: rgb(194, 57, 52);
    margin-bottom: 4px;
    font-size : 0.75rem;
}

@media all and (max-width: 480px){
    .THIS .ap-section > .slds-grid.rr-form-element .slds-form-element__help {
        margin-top: 30px;
    }

    .THIS .ap-section > .slds-grid.rr-form-element .slds-size--2-of-10 {
        min-width: 50%;
    }
}

